--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="shortcut icon" href="pic/1.jpg" />
       <link rel="stylesheet" href="style.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,6 +16,7 @@
 
 <body>
       <!--responsive tab--->
+
       <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                   <div class="navbar-header">
@@ -41,10 +41,17 @@
 
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                              <li><a href="signin.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                              <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                              <li><a href="signin.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+                              </li>
+                              <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                              </li>
                         </ul>
                   </div>
+            </div>
+            <div class="about-section">
+                  <h1>Blog Page</h1>
+                  <p>Here is our story!</p>
+
             </div>
       </nav>
 
@@ -63,95 +70,95 @@
             }
       </script>
 
-      <div class="about-section">
+
+      <div class="contentabout">
+            <h2 style="text-align:center"></h2>
+            <div class="row">
+                  <div class="column">
+                        <div class="card">
+                              <img src="pic/1.jpg" alt="1" style="width:20%">
+                              <div class="container">
+                                    <h2>Topic 1</h2>
+                                    <p class="title">Blog No: 1</p>
+
+                                    <p>"Hello World!"</p>
+
+                                    <p></p>
+                              </div>
+                        </div>
+                  </div>
+
+                  <div class="column">
+                        <div class="card">
+                              <img src="pic/1.jpg" alt="1" style="width:20%">
+                              <div class="container">
+                                    <h2>Topic 2</h2>
+                                    <p class="title">Blog No: 2</p>
+                                    <p>"Hello World!"</p>
+
+                                    <p></p>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="column">
+                        <div class="card">
+                              <img src="pic/1.jpg" alt="1" style="width:20%">
+                              <div class="container">
+                                    <h2>Topic 3</h2>
+                                    <p class="title">Blog No: 3</p>
+
+                                    <p>"Hello World!"</p>
+
+                                    <p></p>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+            <div class="row">
+                  <div class="column">
+                        <div class="card">
+                              <img src="pic/1.jpg" alt="1" style="width:20%">
+                              <div class="container">
+                                    <h2>Topic 4</h2>
+                                    <p class="title">Blog No: 4</p>
+                                    <p>"Hello World!"</p>
+
+                                    <p></p>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="column">
+                        <div class="card">
+                              <img src="pic/1.jpg" alt="1" style="width:20%">
+                              <div class="container">
+                                    <h2>Topic 5</h2>
+                                    <p class="title">Blog No: 5</p>
+                                    <p>"Hello World!"</p>
+
+                                    <p></p>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="column">
+                        <div class="card">
+                              <img src="pic/1.jpg" alt="1" style="width:20%">
+                              <div class="container">
+                                    <h2>Topic 6</h2>
+                                    <p class="title">Blog No: 6</p>
+                                    <p>"Hello World!"</p>
+
+                                    <p></p>
+                              </div>
+                        </div>
+                  </div>
+
+            </div>
+      </div>
+      <div class="about-section2">
             <h1>Blog Page</h1>
             <p>Here is our story!</p>
 
       </div>
-
-      <h2 style="text-align:center"></h2>
-      <div class="row">
-            <div class="column">
-                  <div class="card">
-                        <img src="pic/1.jpg" alt="1" style="width:20%">
-                        <div class="container">
-                              <h2>Topic 1</h2>
-                              <p class="title">Blog No: 1</p>
-
-                              <p>"Hello World!"</p>
-
-                              <p></p>
-                        </div>
-                  </div>
-            </div>
-
-            <div class="column">
-                  <div class="card">
-                        <img src="pic/1.jpg" alt="1" style="width:20%">
-                        <div class="container">
-                              <h2>Topic 2</h2>
-                              <p class="title">Blog No: 2</p>
-                              <p>"Hello World!"</p>
-
-                              <p></p>
-                        </div>
-                  </div>
-            </div>
-            <div class="column">
-                  <div class="card">
-                        <img src="pic/1.jpg" alt="1" style="width:20%">
-                        <div class="container">
-                              <h2>Topic 3</h2>
-                              <p class="title">Blog No: 3</p>
-
-                              <p>"Hello World!"</p>
-
-                              <p></p>
-                        </div>
-                  </div>
-            </div>
-      </div>
-      <div class="row">
-            <div class="column">
-                  <div class="card">
-                        <img src="pic/1.jpg" alt="1" style="width:20%">
-                        <div class="container">
-                              <h2>Topic 4</h2>
-                              <p class="title">Blog No: 4</p>
-                              <p>"Hello World!"</p>
-
-                              <p></p>
-                        </div>
-                  </div>
-            </div>
-            <div class="column">
-                  <div class="card">
-                        <img src="pic/1.jpg" alt="1" style="width:20%">
-                        <div class="container">
-                              <h2>Topic 5</h2>
-                              <p class="title">Blog No: 5</p>
-                              <p>"Hello World!"</p>
-
-                              <p></p>
-                        </div>
-                  </div>
-            </div>
-            <div class="column">
-                  <div class="card">
-                        <img src="pic/1.jpg" alt="1" style="width:20%">
-                        <div class="container">
-                              <h2>Topic 6</h2>
-                              <p class="title">Blog No: 6</p>
-                              <p>"Hello World!"</p>
-
-                              <p></p>
-                        </div>
-                  </div>
-            </div>
-
-
-      </div>
-
 
       <footer class="text-center">
             <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
@@ -195,6 +202,9 @@
                   });
             })
       </script>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
